fix charts alignments

--- a/app/assets/styles/core/_home.scss
+++ b/app/assets/styles/core/_home.scss
@@ -6,7 +6,7 @@
 .overview-home-charts {
   padding: ($global-spacing * 4) 0 ($global-spacing * 2) 0;
   box-shadow: inset 0 1px 0 0 $tertiary-color;
-  display: flex;
+  //display: flex;
   align-items: center;
   flex-wrap: wrap;
   @extend .clearfix;
